@startuml
!include ../../../../../../../StylesForDiagrams.puml

package cleanmovie as "com.vanskarner.cleanmovie.ui"{
    package errors {
        class ErrorDialog
        class FavoritesLimitError
        class NoInternetError
        class NotFoundError
        class ServerError
        class ServiceUnavailableError
        class UnauthorisedError
        class UnknownError
    }
    together {
        class FavoritesFragment
        class DeleteFavoritesDialog
        class FavoritesBindAdapter
        class FavoritesDetailDialog
    }
    together {
        class UpcomingFragment
        class Pagination
        class RxSearchView
        class UpcomingBindAdapter
    }
    together {
        class UpcomingDetailFragment
    }
    together {
        class MovieViewMapper
        class MovieDetailModel<<(D,orange)Data Structure>>
        class MovieModel<<(D,orange)Data Structure>>
    }
}
package usecases as "com.vanskarner.movie.presentation"{
    interface FavoritesContractPresenter<<interface>>
    interface FavoritesContractView<<interface>>
    interface UpcomingContractPresenter<<interface>>
    interface UpcomingDetailContractPresenter<<interface>>
    interface UpcomingContractView<<interface>>
    interface UpcomingDetailContractView<<interface>>
    interface ErrorView<T><<interface>>
}

ErrorView <|.. FavoritesLimitError
ErrorView <|.. NoInternetError
ErrorView <|.. NotFoundError
ErrorView <|.. ServerError
ErrorView <|.. ServiceUnavailableError
ErrorView <|.. UnauthorisedError
ErrorView <|.. UnknownError
ErrorView "1" <-  ErrorDialog

ErrorDialog <-- FavoritesFragment
ErrorDialog <-- UpcomingFragment
ErrorDialog <-- UpcomingDetailFragment


/'Favorites Feature'/
FavoritesContractView <|. FavoritesFragment
FavoritesContractPresenter <-- FavoritesFragment
FavoritesFragment --> FavoritesBindAdapter
FavoritesFragment --> DeleteFavoritesDialog
FavoritesFragment --> FavoritesDetailDialog
FavoritesFragment ..> MovieViewMapper
/'FavoritesFragment --> ErrorDialog'/
FavoritesDetailDialog --> MovieDetailModel

/'Upcoming Feature'/
UpcomingContractPresenter <-- UpcomingFragment
UpcomingContractView <|.. UpcomingFragment
UpcomingFragment --> Pagination
UpcomingFragment --> UpcomingBindAdapter
UpcomingFragment ..> MovieViewMapper
/'UpcomingFragment --> ErrorDialog'/
UpcomingFragment --> RxSearchView

/'UpcomingDetail Feature'/
UpcomingDetailContractPresenter <-- UpcomingDetailFragment
UpcomingDetailContractView <|.. UpcomingDetailFragment
UpcomingDetailFragment ..> MovieViewMapper
/'UpcomingDetailFragment --> ErrorDialog'/

MovieDetailModel -|> MovieModel
MovieViewMapper ..> MovieDetailModel
MovieViewMapper ..> MovieModel


hide members
skinparam Linetype ortho
@enduml